[gd_scene load_steps=7 format=3 uid="uid://dcywre3ewu45x"]

[ext_resource type="Script" uid="uid://burpscv4ek4n4" path="res://elements/pause_menu.gd" id="1_h2ae7"]
[ext_resource type="PackedScene" uid="uid://df7hnv525jqsf" path="res://elements/text_common.tscn" id="2_ca5kw"]
[ext_resource type="PackedScene" uid="uid://cmhamebdrnu3k" path="res://elements/text_small.tscn" id="3_7dhcl"]
[ext_resource type="PackedScene" uid="uid://bkswdv104118w" path="res://elements/settings_menu.tscn" id="3_i1130"]

[sub_resource type="GDScript" id="GDScript_i1130"]
script/source = "extends VBoxContainer

func _ready() -> void:
	self.visible = OS.has_feature(\"debug\")
"

[sub_resource type="GDScript" id="GDScript_ll5mm"]
script/source = "extends ItemList

@onready var pause_menu: PauseMenu = $\"../../../../..\"
@onready var levels = LevelRotator.all_level_files

func _ready() -> void:
	self.item_selected.connect(func(idx):
		LevelRotator.dev_change_level(self, idx)
		pause_menu.set_paused(false))

	for level in levels:
		level = (level
			.rsplit(\"/\", false, 1)[1]
			.replace(\".tscn\", \"\")
			.replace(\"level0\", \"\")
			.replace(\"level\", \"\"))
		self.add_item(level)
"

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_h2ae7")

[node name="Background" type="Polygon2D" parent="."]
process_mode = 2
modulate = Color(0.23, 0.23, 0.23, 0.835294)
polygon = PackedVector2Array(0, 0, 0, 0, 1, 0, 1, 1, 0, 1)

[node name="Margins" type="MarginContainer" parent="."]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Margins"]
layout_mode = 2

[node name="TextCommon" parent="Margins/VBoxContainer" instance=ExtResource("2_ca5kw")]
modulate = Color(0.941176, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 21
text = "Pause"

[node name="HBoxContainer" type="HBoxContainer" parent="Margins/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsMenu" parent="Margins/VBoxContainer/HBoxContainer" instance=ExtResource("3_i1130")]
layout_mode = 2

[node name="ButtonResume" type="Button" parent="Margins/VBoxContainer/HBoxContainer/SettingsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Continue"

[node name="DeveloperOptions" type="VBoxContainer" parent="Margins/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = SubResource("GDScript_i1130")

[node name="TextSmall" parent="Margins/VBoxContainer/HBoxContainer/DeveloperOptions" instance=ExtResource("3_7dhcl")]
layout_mode = 2
text = "Dev options"

[node name="ItemList" type="ItemList" parent="Margins/VBoxContainer/HBoxContainer/DeveloperOptions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 8
script = SubResource("GDScript_ll5mm")
